Fix off-center images on certain screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -315,14 +315,6 @@ u {
   border-radius: 8px;
 }
 
-.project-image-overlay {
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.5;
-}
-
 .row.row-grid [class*="col-"] {
   margin-top: 25px;
 }
